# handy-tool

./: .gitignore  README.org  README_env.org  intellij_config.toml  naming.org  pyproject.toml  requirements.txt  setup.py
handy_tool/: apktool1.py  app.py  ccode.py  check_missing.py  clean_space.py  done.py  du1.py  gettopactivity.py  gh1.py  iid.py  ip.py  jt_code.py  just_ex.py  l.py  link_all.py  md5.py  merged_rm.py  pip1.py  random_port.py  random_pwd.py  sync_link.py  tt.py  vcpkg1.py  where1.py
handy_tool/an_util/: an_util.py  push_cert.py  shorter.py
handy_tool/cm/: __init__.py  clean.py  install.py
handy_tool/env/: __init__.py  env.py
handy_tool/git/: __init__.py  git_br.py  pipe.py  view.py
handy_tool/idea/: idea_android.py  idea_base.py  idea_clion.py  idea_clion_nova.py  idea_code.py  idea_fleet.py  idea_intellij.py  idea_jetbrain.py  idea_phpstorm.py  idea_pycharm.py  idea_rust_rover.py  idea_webstorm.py  smart_ide_bck.py  smart_idea.py
handy_tool/img/: __init__.py
handy_tool/jenv/: README.org  __init__.py  jenv.py
handy_tool/jvm/: __init__.py  jvm.py
handy_tool/path/: __init__.py  path.py
handy_tool/personal/: personal.py  personal_win.py
handy_tool/repo/: __init__.py  add.py  clean.py  comm.py  pull.py  remove_all.py  repo_list.py  status.py  typing.py
handy_tool/sy/: __init__.py
handy_tool/util/: reg.py  util_argparse.py  util_find_program.py  util_git.py  util_os.py  util_powershell.py  win.py
handy_tool/vcpkg1/: vcpkg1.py
lab/: __init__.py  branch.py
src/handy_tool/: adb.py  app.py  docker1.py  files.py  listen.py  md5.py  unzip1.py  urlencode.py  wait.py
tests/: test_json2bean.py  test_junk_file.py
util/: add_to_path.py  app.py  file.py  gitup.py  jt_code.py  l.py  merged_rm.py
util/an_util/: _util.py  an_util.py  get_apk.py  push_cert.py
util/cm/: __init__.py  clean.py  init.py
util/config/: __init__.py
util/env/: __init__.py
(+116 files in other folders)
